--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<img [src]="carUrl" [appDefaultImage]="homeUrl" />
-<img [src]="brokenUrl" [appDefaultImage]="homeUrl" />
+<img [src]="carUrl" [defaultImage]="homeUrl" />
+<img [src]="brokenUrl" [defaultImage]="homeUrl" />
